<resources>
    <string name="app_name">AppSupermercado</string>
    <string name="cart_title">Tu carrito de compra</string>
    <string name="jamon">Jamon</string>
    <string name="queso">Queso</string>
    <string name="atun">Atun</string>
    <string name="leche">Leche</string>
    <string name="pagar">Ir a Pagar</string>
    <string name="buscador">¿Qué estas buscando?</string>
    <string name="imagenFrutas">Frutas</string>
    <string name="textoPromociones">Las mejores promociones para ti</string>
    <string name="textoBebe">Especial bebé</string>
    <string name="lacteos">Lacteos</string>
    <string name="coffehouse">Breakfast</string>
    <string name="cocinaymesa">Cocina y mesa</string>
    <string name="productosFrecuentes">Tus productos frecuentes</string>
    <string name="precioLeche">$1780</string>
    <string name="precioPlatano">$1200K</string>
    <string name="precioArrox">$980</string>
    <string name="vermas">Ver más</string>
    <string name="shipping_rate">¡Tu pedido llego!</string>
    <string name="shipping_rate2">¿Te gustaria calificarlo?</string>
    <string name="shipping_address_selection">Como quieres tu compra:</string>
    <string name="medio_pago">VISA **** ****  *675</string>
    <string name="textoUsuario">Username</string>
    <string name="textoContrasenia">Ingrese Contraseña</string>
    <string name="buttonIngresarLogin">Ingresar</string>
    <string name="textoCereales">Cereales</string>
    <string name="precioZucarita">$2000</string>
    <string name="precioCornFlakes">$2300</string>
    <string name="precioFrootLoops">$1900</string>
    <string name="precioChocapic">$1700</string>
    <string name="precioMilo">$2100</string>
    <string name="precioNesquit">$1990</string>
    <string name="precioCerealFitnes">$1690</string>
    <string name="precioCheerios">$1600</string>
    <string name="precioCerealOreo">$2300</string>
    <string name="breakfast">Desayuno</string>
    <string name="frutas">Frutas</string>
    <string name="precioManzana">$800K</string>
    <string name="precioNaranja">$890K</string>
    <string name="precioPomelo">$1100K</string>
    <string name="precioFrambrueza">$1800K</string>
    <string name="precioCereza">$2100K</string>
    <string name="precioCiruela">$1390K</string>
    <string name="precioFrutilla">$1200K</string>
    <string name="precioDurazno">$1400K</string>
    <string name="registro">Registrarse</string>
    <string name="registroNombre">Nombre</string>
    <string name="registroApellido">Apellido</string>
    <string name="registroCorreo">Correo electronico</string>
    <string name="registroNumero">Número de celular</string>
    <string name="registroContrasenia">Contraseña</string>
    <string name="registroConfirmarContrasenia">Confirmar contraseña</string>
    <string name="registroCrearCuenta">Crear cuenta</string>
    <string name="registroBtnIngresar">Ingresar</string>
    <string name="todo">TODO</string>


    <string name="moverseALogin">Login</string>
    <string name="abrirWhatsapp">Whatsapp</string>
    <string name="busquedaGoogle">Google</string>
    <string name="contantosDirectorio">Contactos</string>
    <string name="moverIntentNuevo">Actividad</string>

</resources>
