<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_registro_view">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="410dp"
        android:layout_height="731dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo_para_registro"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="176dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/registro"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/registroApellido"
        android:inputType="textPersonName"
        android:textColorHint="#757070"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="188dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/registroCorreo"
        android:inputType="textPersonName"
        android:textColorHint="#757070"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="256dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/registroNumero"
        android:inputType="textPersonName"
        android:textColorHint="#757070"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/registroContrasenia"
        android:inputType="textPassword"
        android:textColorHint="#757070"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/registroConfirmarContrasenia"
        android:inputType="textPassword"
        android:textColorHint="#757070"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button11"
        android:layout_width="235dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:text="@string/registroCrearCuenta"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registroBtnIngresar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/registroNombre"
        android:inputType="textPersonName"
        android:textColor="#857F7F"
        android:textColorHint="#757070"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>